[package]
name = "worker_logger"
version = "1.0.0-alpha.3"
description = "A logger implementation for Cloudflare Workers"
homepage = "https://github.com/RedL0tus/worker_logger"
repository = "https://github.com/RedL0tus/worker_logger"
keywords = [ "Cloudflare", "worker", "serverless", "logger", "wasm" ]
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [ "wasm", "web-programming" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ ]
color = [ "colored" ]
env_logger_string = [ "env_logger" ]

[dependencies]
log = "^0.4"
worker = "^0.5"
colored = { version = "^3.0", optional = true }
env_logger = { version = "^0.11", optional = true }
